src/objects/Case_Owner__c.object
<CustomObject>
    <fields>
        <fullName>CA_Handled__c</fullName>
        <formula>IF(AND( Case__r.CreatedBy.Profile.Name &lt;&gt; &quot;CSC&amp;FST CA&quot;, 
Last_Owner__r.Profile.Name &lt;&gt; &quot;CSC&amp;FST CA&quot; ),
 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Handled_for_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CA Handled for Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_IsQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Queue Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Report_New_CaseOwner_Role__c</fullName>
        <label>New CaseOwner Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Old_CaseOwner_Role__c</fullName>
        <label>Old CaseOwner Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Report_Role__c</fullName>
        <label>Old Owner Role_del</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>RCEL1</fullName>
                </value>
                <value>
                    <fullName>RCEL2</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Report_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Owner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Create_Datetime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Create Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dp_Assign_Case_Time_Type__c</fullName>
        <formula>IF( OR(MOD( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 7 ), 7 )= 1, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 2, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 3, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 4, 
MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 )= 5), 
IF( 
AND( VALUE(TEXT(value(MID(TEXT(CreatedDate),12,2))+8)+ 
IF(value(MID(TEXT(CreatedDate),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CreatedDate),15,2))), 
TEXT(value(MID(TEXT(CreatedDate),15,2)))) )&gt;830, 
VALUE(TEXT(value(MID(TEXT(CreatedDate),12,2))+8)+ 
IF(value(MID(TEXT(CreatedDate),15,2))&lt;10, 
&quot;0&quot; + TEXT(value(MID(TEXT(CreatedDate),15,2))), 
TEXT(value(MID(TEXT(CreatedDate),15,2)))) )&lt;1800), 
&quot;Office Hour&quot;, 
&quot;Night Shift&quot;), 
&quot;Weekend&quot;)</formula>
        <label>Dp Assign Case Time Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Queue_Last__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Queue New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_CaseOwner_Role__c</fullName>
        <label>New CaseOwner Role_del</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>RCEL1</fullName>
                </value>
                <value>
                    <fullName>RCEL2</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Owner1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_QueueName__c</fullName>
        <label>New QueueName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CaseOwner_Employeeid__c</fullName>
        <formula>Last_Owner__r.Employee_ID__c</formula>
        <label>New CaseOwner Employeeid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CaseOwner_Loginname__c</fullName>
        <formula>Last_Owner__r.Username</formula>
        <label>New CaseOwner Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CaseOwner_Workgroup__c</fullName>
        <formula>TEXT( Last_Owner__r.Workgroup__c )</formula>
        <label>New CaseOwner Workgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CaseOwner_Employeeid__c</fullName>
        <formula>CaseOwner__r.Employee_ID__c</formula>
        <label>Old CaseOwner Employeeid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CaseOwner_Loginname__c</fullName>
        <formula>CaseOwner__r.Username</formula>
        <label>Old CaseOwner Loginname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CaseOwner_Workgroup__c</fullName>
        <formula>TEXT( CaseOwner__r.Workgroup__c )</formula>
        <label>Old CaseOwner Workgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>Old QueueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Owner History</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Case_Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>